Update to build.gradle and yaml to attempt to get the macOS build working.